--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/org2_workout
+spring.datasource.username=postgres
+spring.datasource.password=123456
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+# ===============================
+# LOGGING CONFIGURATION
+# ===============================
+
+# Padrão do log no console
+logging.pattern.console=%d{HH:mm:ss} %-5level [%thread] %logger{36} - %msg%n
+
+# Reduz verbosidade do Hibernate
+logging.level.org.hibernate.SQL=OFF
